# trivia-voice

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: deploy-trivia-mcp.yml
apps/bot-server/: .gitignore  Dockerfile  README.md  agent.py  package.json  pyproject.toml
apps/trivia-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  package.json  tsconfig.json
apps/trivia-mcp/src/: server.ts
apps/trivia-mcp/src/tools/: checkAnswer.ts  getTrivia.ts
apps/trivia-mcp/src/utils/: opentdb.ts
apps/web/: README.md  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/components/: transcription-view.tsx
apps/web/src/app/room/: page.tsx
apps/web/src/components/: transcription-view.tsx  trivia-game.tsx
apps/web/src/components/shared/: error-boundary.tsx  terminal-header.tsx  typewriter-text.tsx
apps/web/src/components/trivia-game/: index.tsx
apps/web/src/components/trivia-game/components/: ConversationSection.tsx  ErrorScreen.tsx  GameHeader.tsx  GameLayout.tsx  LoadingScreen.tsx  StatusIndicator.tsx  TriviaGameContent.tsx  VoiceSection.tsx
apps/web/src/components/trivia-game/hooks/: useConnectionManager.ts  useGameStatus.ts  useGameTimer.ts  useResponsive.ts
apps/web/src/components/trivia-game/utils/: constants.ts  formatters.ts
apps/web/src/hooks/: use-combined-transcriptions.tsx
apps/web/src/lib/: constants.ts  performance.ts  types.ts  utils.ts
scripts/: setup-cicd.sh
